# tapd-cli

./: .env.example  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/skills/tapd-cli/: SKILL.md
src/: cli.rs  client.rs  config.rs  main.rs
