[package]
name = "tapd-cli"
version = "0.1.8"
edition = "2021"
description = "TAPD CLI - 高效的 TAPD 项目管理命令行工具"

[[bin]]
name = "tapd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
